[gd_scene load_steps=9 format=2]

[ext_resource path="res://GUI/CoinSelector.tscn" type="PackedScene" id=2]
[ext_resource path="res://GUI/StartScreen.gd" type="Script" id=4]
[ext_resource path="res://assets/sounds/click3.ogg" type="AudioStream" id=5]
[ext_resource path="res://assets/fonts/AlteHaasGroteskBold.ttf" type="DynamicFontData" id=6]

[sub_resource type="DynamicFont" id=1]
size = 40
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=2]
size = 20
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=3]
size = 24
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=4]
size = 37
font_data = ExtResource( 6 )

[node name="StartScreen" type="CanvasLayer"]
script = ExtResource( 4 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/separation = 14
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TitleContainer" type="MarginContainer" parent="VBoxContainer"]
margin_right = 1024.0
margin_bottom = 108.0
custom_constants/margin_top = 60

[node name="Title" type="Label" parent="VBoxContainer/TitleContainer"]
margin_top = 60.0
margin_right = 1024.0
margin_bottom = 108.0
custom_fonts/font = SubResource( 1 )
text = "Gioco delle MONETE"
align = 1
valign = 1

[node name="ObjectiveContainer" type="MarginContainer" parent="VBoxContainer"]
margin_top = 122.0
margin_right = 1024.0
margin_bottom = 202.0
custom_constants/margin_right = 340
custom_constants/margin_top = 20
custom_constants/margin_left = 356
custom_constants/margin_bottom = 20

[node name="ObjectiveControl" type="HBoxContainer" parent="VBoxContainer/ObjectiveContainer"]
margin_left = 356.0
margin_top = 20.0
margin_right = 684.0
margin_bottom = 60.0
custom_constants/separation = 12

[node name="Label" type="Label" parent="VBoxContainer/ObjectiveContainer/ObjectiveControl"]
margin_top = 7.0
margin_right = 158.0
margin_bottom = 32.0
custom_fonts/font = SubResource( 2 )
text = "Indica una cifra: "

[node name="ObjectiveInput" type="LineEdit" parent="VBoxContainer/ObjectiveContainer/ObjectiveControl"]
margin_left = 170.0
margin_right = 264.0
margin_bottom = 40.0
custom_fonts/font = SubResource( 3 )
align = 1
max_length = 6
expand_to_text_length = true
placeholder_text = "0.00"
caret_blink = true

[node name="Label2" type="Label" parent="VBoxContainer/ObjectiveContainer/ObjectiveControl"]
margin_left = 276.0
margin_top = 7.0
margin_right = 327.0
margin_bottom = 32.0
custom_fonts/font = SubResource( 2 )
text = " Euro"

[node name="MoneyContainer" type="MarginContainer" parent="VBoxContainer"]
margin_top = 216.0
margin_right = 1024.0
margin_bottom = 468.0
custom_constants/margin_left = 180

[node name="MoneyControls" type="HBoxContainer" parent="VBoxContainer/MoneyContainer"]
margin_left = 180.0
margin_right = 1024.0
margin_bottom = 252.0

[node name="Left" type="VBoxContainer" parent="VBoxContainer/MoneyContainer/MoneyControls"]
margin_right = 296.0
margin_bottom = 252.0

[node name="1Cent" parent="VBoxContainer/MoneyContainer/MoneyControls/Left" groups=[
"coin_control",
] instance=ExtResource( 2 )]
margin_right = 296.0

[node name="2Cent" parent="VBoxContainer/MoneyContainer/MoneyControls/Left" groups=[
"coin_control",
] instance=ExtResource( 2 )]
margin_top = 64.0
margin_right = 296.0
margin_bottom = 124.0
type = 1

[node name="5Cent" parent="VBoxContainer/MoneyContainer/MoneyControls/Left" groups=[
"coin_control",
] instance=ExtResource( 2 )]
margin_top = 128.0
margin_right = 296.0
margin_bottom = 188.0
type = 2

[node name="10Cent" parent="VBoxContainer/MoneyContainer/MoneyControls/Left" groups=[
"coin_control",
] instance=ExtResource( 2 )]
margin_top = 192.0
margin_right = 296.0
margin_bottom = 252.0
type = 3

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/MoneyContainer/MoneyControls"]
margin_left = 300.0
margin_right = 344.0
margin_bottom = 252.0
custom_constants/margin_right = 20
custom_constants/margin_left = 20

[node name="VSeparator" type="VSeparator" parent="VBoxContainer/MoneyContainer/MoneyControls/MarginContainer"]
margin_left = 20.0
margin_right = 24.0
margin_bottom = 252.0

[node name="Right" type="VBoxContainer" parent="VBoxContainer/MoneyContainer/MoneyControls"]
margin_left = 348.0
margin_right = 644.0
margin_bottom = 252.0

[node name="20Cent" parent="VBoxContainer/MoneyContainer/MoneyControls/Right" groups=[
"coin_control",
] instance=ExtResource( 2 )]
margin_right = 296.0
type = 4

[node name="50Cent" parent="VBoxContainer/MoneyContainer/MoneyControls/Right" groups=[
"coin_control",
] instance=ExtResource( 2 )]
margin_top = 64.0
margin_right = 296.0
margin_bottom = 124.0
type = 5

[node name="1Euro" parent="VBoxContainer/MoneyContainer/MoneyControls/Right" groups=[
"coin_control",
] instance=ExtResource( 2 )]
margin_top = 128.0
margin_right = 296.0
margin_bottom = 188.0
type = 6

[node name="2Euro" parent="VBoxContainer/MoneyContainer/MoneyControls/Right" groups=[
"coin_control",
] instance=ExtResource( 2 )]
margin_top = 192.0
margin_right = 296.0
margin_bottom = 252.0
type = 7

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer"]
margin_top = 482.0
margin_right = 1024.0
margin_bottom = 554.0
custom_constants/margin_right = 400
custom_constants/margin_top = 20
custom_constants/margin_left = 400

[node name="PlayButton" type="Button" parent="VBoxContainer/MarginContainer"]
margin_left = 400.0
margin_top = 20.0
margin_right = 624.0
margin_bottom = 72.0
custom_fonts/font = SubResource( 4 )
text = "GIOCA"

[node name="ButtonAudio" type="AudioStreamPlayer" parent="VBoxContainer/MarginContainer"]
stream = ExtResource( 5 )
volume_db = -0.5
[connection signal="pressed" from="VBoxContainer/MarginContainer/PlayButton" to="." method="_on_PlayButton_pressed"]
